# weathergraph

./: README.md  main.py  pyproject.toml
data/: weather_cache.db
src/api/: geocoding.py  weather_client.py
src/cache/: cache_manager.py  models.py
src/ui/: app.py
src/web/: app.js  index.html  style.css
