[project]
name = "weather"
version = "0.1.0"
description = "Historical weather data visualization app with interactive plots"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "eel>=0.16.0",
    "requests>=2.31.0",
    "plotly>=5.17.0",
    "pandas>=2.1.0",
    "sqlalchemy>=2.0.0",
    "pgeocode>=0.4.0"
]
